# named

./: .dockerignore  .env.example  .gitignore  BATCH_TESTING.md  CHANGELOG.md  Dockerfile  PRODUCTION_ANALYSIS_REPORT.md  QUALITY_REVIEW.md  README.md  STAKEHOLDER_REPORT.md  TECHNICAL_REPORT.md  batch_settings.yaml  docker_build.sh  pyproject.toml
claude/: CLAUDE.md  PLAN.md
docs/: architecture.md  configuration.md  guardrails.md  rules.md
report/: report.json  report.md
src/named/: __init__.py  __main__.py  cli.py  config.py  logging.py
src/named/analysis/: __init__.py  extractor.py  hierarchy.py  impact_analyzer.py  parser.py  reference_finder.py
src/named/apply/: __init__.py  models.py  rename_engine.py  report_loader.py  verifier.py
src/named/export/: __init__.py  json_exporter.py  markdown_exporter.py
src/named/prompts/: __init__.py  analysis.py  base.py  schemas.py  system.py
src/named/rules/: __init__.py  guardrails.py  models.py  naming_rules.py  prompt_renderer.py
src/named/suggestions/: __init__.py  batch_client.py  client_factory.py  common.py  llm_client.py  prompt_builder.py
src/named/validation/: __init__.py  validator.py
tests/: __init__.py  test_batch_client.py  test_cli_commands.py  test_client_factory.py  test_estimate.py  test_hierarchy.py  test_impact_analyzer.py  test_llm_client.py  test_parser.py  test_references.py  test_rules.py  test_shadow.py  test_validation.py
tests/fixtures/: SampleService.java
tests/fixtures/apply/: SampleReference.java  (+2 more)
tests/test_apply/: test_rename_engine.py  test_report_loader.py  test_verifier.py
(+14 files in other folders)
